# mcp-server

./: .gitignore  README.md
byted-api/: .mcp.json  CLAUDE.md  README.md  main.py  requirements.txt  settings-example.json  startup.sh  status.sh  technical-plan.md  test_comments.py  test_instance_discovery.py  test_rpc_simulation.py  诉求.md
byted-api/src/: __init__.py  auth.py  cluster_discovery.py  instance_discovery.py  log_discovery.py  mcp_server.py  rpc_simulation.py  service_discovery.py
byted-api/tests/: test.py  test_cluster_discovery.py  test_complete_region_integration.py  test_comprehensive.py  test_dotenv_integration.py  test_error_handling.py  test_instance_discovery.py  test_log_discovery.py  test_mcp.py  test_mcp_log_tool.py  test_mcp_multi_region.py  test_multi_region_auth.py  test_multi_region_logs.py  test_region_cookies.py  test_rpc_simulation.py
byted-auth/: AGENTS.md  CLAUDE.md  EXTENSION_PLAN.md  LIGHTWEIGHT_CDP.md  README.md  browser.py  capture.py  cli.py  demo.py  run_login.sh  storage.py
byted-auth/extension/: README.md  background.js  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js
byted-devops/: AGENTS.md  CLAUDE.md  README.md  demo.py  main.py  startup.sh  status.sh  诉求.md
byted-devops/src/: auth.py  bits_query_task_changes.py  mcp_server.py
byted-lark/: AGENTS.md  CLAUDE.md  demo.py  main.py  startup.sh  status.sh  诉求.md
byted-lark/src/: __init__.py  add_permission_member.py  auth.py  convert_block.py  create_block.py  create_doc.py  get_doc.py  get_note.py  mcp_server.py  update_blocks.py  upload_all.py
byted-live-promotion/: CLAUDE.md  README.md  main.py  startup.sh  status.sh  stop.sh  technical-plan.md  test.py  test_cluster_discovery.py  test_comprehensive.py  test_error_handling.py  诉求.md
byted-log/: AGENTS.md  CLAUDE.md  README.md  main.py  message_filters.json  requirements.txt  restart.sh  status.sh  stop.sh  诉求.md
image2text/: .env.example  .mcp.json  CLAUDE.md  README.md  USAGE.md  example_usage.py  pyproject.toml  requirements.txt  run_tests.py  simple_client.py  start.sh  stop.sh  test.py  技术实现文档.md  诉求.md
image2text/src/: __init__.py  api_client.py  config.py  image_processor.py  main.py
image2text/tests/: test_api_client.py  test_config.py  test_image_processor.py  test_main.py
mcp-encoding-server/: README.md  encoding-server.ts  package-lock.json  package.json  tsconfig.json
stock/: README.md  USAGE.md  akshare.md  claude_desktop_config.json  demo.sh  mcp_demo.md  requirements.txt  start.sh  stock_mcp_server.py  stop.sh  test.py  test_mcp_client.py
super-time/: CLAUDE.md  README.md  install.sh  pyproject.toml  restart.sh  start.py  start.sh  status.sh  stop.sh  诉求.md
super-time/src/super_time/: __init__.py  core.py
super-time/tests/: test_super_time.py
(+24 files in other folders)
