[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "super-time"
version = "0.1.0"
description = "基于 fastmcp 的灵活时间获取服务"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastmcp>=0.4.0",
    "pytz>=2023.3",
    "python-dateutil>=2.8.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/super_time"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"